--- a/HW1109/19_黃家鈞/CH07.02_Q09.md
+++ b/HW1109/19_黃家鈞/CH07.02_Q09.md
@@ -2,14 +2,14 @@
 
 第7題：取出不放回
 
-| Possible samples |      $\bar{x}$      |         $P(\bar{x})$         | 
- | ---------------- | ------------------- | ---------------------------- |
- | (10, 15)         | $\frac{25}{2}=12.5$ | $\frac{1}{6} \approx 0.167$  | 
- | (10, 21)         | $\frac{31}{2}=15.5$ | $\frac{1}{6} \approx 0.167$  | 
- | (10, 22)         | $\frac{32}{2}=16$   | $\frac{1}{6} \approx 0.167$  | 
- | (15, 21)         | $\frac{36}{2}=18$   | $\frac{1}{6} \approx 0.167$  | 
- | (15, 22)         | $\frac{37}{2}=18.5$ | $\frac{1}{6} \approx 0.167$  | 
- | (21, 22)         | $\frac{43}{2}=21.5$ | $\frac{1}{6} \approx 0.167$  | 
+ | Possible samples |      $\bar{x}$      |$P(\bar{x})$  | 
+ | ---------------- | ------------------- | -------------|
+ | (10, 15)         | $\frac{25}{2}=12.5$ | $\frac{1}{6}$| 
+ | (10, 21)         | $\frac{31}{2}=15.5$ | $\frac{1}{6}$| 
+ | (10, 22)         | $\frac{32}{2}=16$   | $\frac{1}{6}$| 
+ | (15, 21)         | $\frac{36}{2}=18$   | $\frac{1}{6}$| 
+ | (15, 22)         | $\frac{37}{2}=18.5$ | $\frac{1}{6}$| 
+ | (21, 22)         | $\frac{43}{2}=21.5$ | $\frac{1}{6}$|   
 
  $E[\bar{X}] = \frac{12.5+15.5+16+18+18.5+21.5}{6} = \frac{102}{6} = 17$
 
@@ -17,23 +17,37 @@
 
 | Possible samples |      $\bar{x}$      |       Probability        | 
  | ---------------- | ------------------- | ------------------------ |
- | (10, 10)         | $\frac{20}{2}=10$   | $\frac{1}{16} = 0.0625$  | 
- | (10, 15)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
- | (10, 21)         | $\frac{31}{2}=15.5$ | $\frac{1}{16} = 0.0625$  | 
- | (10, 22)         | $\frac{32}{2}=16$   | $\frac{1}{16} = 0.0625$  | 
- | (15, 10)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
- | (15, 15)         | $\frac{30}{2}=15$   | $\frac{1}{16} = 0.0625$  | 
- | (15, 21)         | $\frac{36}{2}=18$   | $\frac{1}{16} = 0.0625$  | 
- | (15, 22)         | $\frac{37}{2}=18.5$ | $\frac{1}{16} = 0.0625$  | 
- | (21, 10)         | $\frac{31}{2}=15.5$ | $\frac{1}{16} = 0.0625$  | 
- | (21, 15)         | $\frac{36}{2}=18$   | $\frac{1}{16} = 0.0625$  | 
- | (21, 21)         | $\frac{42}{2}=21$   | $\frac{1}{16} = 0.0625$  | 
- | (21, 22)         | $\frac{43}{2}=21.5$ | $\frac{1}{16} = 0.0625$  | 
- | (22, 10)         | $\frac{32}{2}=16$   | $\frac{1}{16} = 0.0625$  | 
- | (22, 15)         | $\frac{37}{2}=18.5$ | $\frac{1}{16} = 0.0625$  | 
- | (22, 21)         | $\frac{43}{2}=21.5$ | $\frac{1}{16} = 0.0625$  | 
- | (22, 22)         | $\frac{44}{2}=22$   | $\frac{1}{16} = 0.0625$  | 
- 
-$E[\bar{X}] =\frac{10+12.5+15.5+16+12.5+15+18+18.5+15.5+18+21+21.5+16+18.5+21.5+22}{16} = \frac{272}{16} = 17$
+ | (10, 10)         | $\frac{20}{2}$ | $\frac {1}{16}$  | 
+ | (10, 15)         | $\frac{25}{2}$ | $\frac{1}{16}$  | 
+ | (10, 21)         | $\frac{31}{2}$ | $\frac{1}{16}$  | 
+ | (10, 22)         | $\frac{32}{2}$   | $\frac{1}{16}$  | 
+ | (15, 10)         | $\frac{25}{2}$ | $\frac{1}{16}$  | 
+ | (15, 15)         | $\frac{30}{2}$   | $\frac{1}{16}$  | 
+ | (15, 21)         | $\frac{36}{2}$   | $\frac{1}{16}$  | 
+ | (15, 22)         | $\frac{37}{2}$ | $\frac{1}{16}$  | 
+ | (21, 10)         | $\frac{31}{2}$ | $\frac{1}{16}$  | 
+ | (21, 15)         | $\frac{36}{2}$   | $\frac{1}{16}$  | 
+ | (21, 21)         | $\frac{42}{2}$   | $\frac{1}{16}$  | 
+ | (21, 22)         | $\frac{43}{2}$ | $\frac{1}{16}$  | 
+ | (22, 10)         | $\frac{32}{2}$   | $\frac{1}{16}$  | 
+ | (22, 15)         | $\frac{37}{2}$ | $\frac{1}{16}$  | 
+ | (22, 21)         | $\frac{43}{2}$ | $\frac{1}{16}$  | 
+ | (22, 22)         | $\frac{44}{2}$   | $\frac{1}{16}$  | 
 
-兩種抽樣方式下，樣本平均數的平均值都是 17，等於母體平均數 $\mu = 17$ 。
+ Sample distribution for the sample mean
+| sample mean $\bar x$ | probability P($\bar{x}$) |
+|:---------------:|:-------:|
+| $\frac{20}{2}=10$ | $\frac{1}{16}$ |
+| $\frac{25}{2}=12.5$ | $\frac{2}{16}$ |
+| $\frac{30}{2}=15$ | $\frac{2}{16}$ |
+| $\frac{31}{2}=15.5$ | $\frac{2}{16}$ |
+| $\frac{32}{2}=16$ | $\frac{1}{16}$ |
+| $\frac{36}{2}=18$ | $\frac{2}{16}$ |
+| $\frac{37}{2}=18.5$ | $\frac{2}{16}$ |
+| $\frac{42}{2}=21$ | $\frac{1}{16}$ |
+| $\frac{43}{2}=21.5$ | $\frac{2}{16}$ |
+| $\frac{44}{2}=22$ | $\frac{1}{16}$ |
+ 
+$E[\bar{X}] =\frac{10+12.5+15+15.5+16+18.5+21+21.5+22}{10} = \frac{170}{10} = 17$
+
+兩種抽樣方式下，樣本平均數的期望值都是 17，等於母體平均數 $\mu = 17$ 。
