--- a/HW1109/19_黃家鈞/CH07.02_Q09.md
+++ b/HW1109/19_黃家鈞/CH07.02_Q09.md
@@ -48,6 +48,6 @@
 | $\frac{43}{2}=21.5$ | $\frac{2}{16}$ |
 | $\frac{44}{2}=22$ | $\frac{1}{16}$ |
  
-$E[\bar{X}] =\frac{10+12.5+15+15.5+16+18.5+21+21.5+22}{10} = \frac{170}{10} = 17$
+$E[\bar{X}] =\frac{10+12.5+15+15.5+16+18+18.5+21+21.5+22}{10} = \frac{170}{10} = 17$
 
 兩種抽樣方式下，樣本平均數的期望值都是 17，等於母體平均數 $\mu = 17$ 。
