--- a/HW1109/19_黃家鈞/CH07.03_Q23.md
+++ b/HW1109/19_黃家鈞/CH07.03_Q23.md
@@ -8,7 +8,7 @@ $\mathcal{G} := \mathcal{G} (mean = \mu, variance = \sigma^{2})$
 
 Central Limit Theorem (Sample Mean) says: when n is large ($n \geq 30$):
 
-$\frac{\bar{X} - \mu}{\frac{\sigma}{\sqrt{n}}} \to N(0,1) \text{ as } n \to \infty$
+$\frac{\bar{X} - \mu_0}{\frac{\sigma}{\sqrt{n}}} \to N(0,1) \text{ as } n \to \infty$
 
 n=400≥30, $X\sim N(1110, 80^{2})$
 
