--- a/HW1109/19_黃家鈞/CH07.03_Q30.md
+++ b/HW1109/19_黃家鈞/CH07.03_Q30.md
@@ -27,5 +27,5 @@ Z轉換:
 
 $\frac{T - \mu_{T}}{\sigma_{T}} = \frac{1300 - 1266}{22.5166} = 1.51$
 
-P(Z > 1.51) = 1 − P( Z ≤ 1.51) = 0.0655(查表得)
+P(Z > 1.51) = 1 − P( Z ≤ 1.51) = 1 - 0.9345 = 0.0655(查表得)
 
