--- a/HW1109/19_黃家鈞/CH07.05_Q27.md
+++ b/HW1109/19_黃家鈞/CH07.05_Q27.md
@@ -2,12 +2,10 @@
 
 The sample proportion $\hat{p}$ follows a normal distribution when n is large $(n \cdot p \geq 10 \, n \cdot (1 - p) \geq 10)$ 
 
-n = 80 ， p = 0.5
+n = 80 ， p = 0.5 , by CLT
 
-$\hat{p} \sim N\left(p, \frac{p(1-p)}{n}\right)$  
+$\frac{\hat{p}-p}{\sqrt{p \times q/n}} \rightarrow^d N ( 0,1)$
 
-$\sigma = \frac{p(1-p)}{n}$ = $\frac{0.5 \cdot 0.5}{80} = 0.003125$
-
-$\sigma_{\hat{p}} = \sqrt{0.003125} = 0.0559$
+SE : $\frac{p(1-p)}{n}$ = $\frac{0.5 \cdot 0.5}{80} = 0.003125$ , $\sqrt{0.003125} = 0.0559$
 
 P(.44 < $\hat{p}$ < .61) = P($\frac{0.44 - 0.5}{0.0559} < Z < \frac{0.61 - 0.5}{0.0559}$) = P(－1.073 < Z < 1.968) = P(Z < 1.967) - P(Z < -1.073) = 0.9750 - 0.1419 = 0.8331(查表得)
