--- a/HW1109/19_黃家鈞/CH07.05_Q28.md
+++ b/HW1109/19_黃家鈞/CH07.05_Q28.md
@@ -6,7 +6,7 @@ p = 0.7 ， n = 50
 
 mean of $\hat{p} = E[\hat{p}] = \mu_{\hat{p}} = p = 0.7$
 
-standard deviation of $\hat{p} = \sigma_{\hat{p}} = \frac{pq }{n} = \sqrt{\frac{p(1-p)}{n}} = 0.0648$
+standard deviation of $\hat{p} = \sigma_{\hat{p}} = \sqrt{\frac{pq }{n}} = \sqrt{\frac{p(1-p)}{n}} = 0.0648$
 
 Sample meam = $\hat{p}$  
 
