--- a/HW1207/12_譚玥湄/CH12.01_Q17.md
+++ b/HW1207/12_譚玥湄/CH12.01_Q17.md
@@ -1,1 +1,10 @@
-![image](https://github.com/user-attachments/assets/7591ef69-5902-4a36-a708-c88716261ef2)
+Method of Least Squares Use the data given in Exercises 17–18. Calculate the sums of squares and cross-products, $S_{xx}$$ and $S_{xy}$. Find the least-squares line for the data. Plot the points and graph the line on the same graph. Does the line appear to provide a good fit to the data points?
+|       |    | | || |
+| :----:  | :--:   | :--: | :--: |   :--: |    :--: | 
+| x | −2 | −1 | 0 | 1 | 2 |   
+| y | 1  | 1  | 3 | 5 | 5 | 
+
+![image](https://github.com/user-attachments/assets/d929ee3c-28aa-4a88-83f0-c5362cb3bed3)
+Here is the plot showing the data points and the least-squares line 
+𝑦 = 3 + 1.2𝑥
+y=3+1.2x. The line appears to provide a good fit to the data points, as it captures the general trend of the data well.
