--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -15,7 +15,7 @@ Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail
 
 ---
 
-Q6. Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given right-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:  
+Q6. Using the t-distribution table, we can find the critical values ($\alpha$) corresponding to the given right-tail area ($$\alpha$$) and degrees of freedom (df). Here are the values:  
 ![image](https://github.com/user-attachments/assets/8fbdd9fc-8976-4167-9392-948b37e535f5)
 
 
@@ -28,14 +28,14 @@ Q6. Using the t-distribution table, we can find the critical values ($$alphat$$)
 5. $$\alpha$$ = .025, df = 12  
   From the t-table, the critical value is:  $t_{0.025}$=2.179
 
-7. $$\alpha$$ = .005, df = 25  
+6. $$\alpha$$ = .005, df = 25  
   From the t-table, the critical value is:  $t_{0.005}$=2.787
 
-9. $$\alpha$$ = .10, df = 7  
-  From the t-table, the critical value is:  $t_{t_0.10$}=1.415  
+7. $$\alpha$$ = .10, df = 7  
+  From the t-table, the critical value is:  $t_{t_0.10}$=1.415  
 
 ---
-Q7. Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given left-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:  
+Q7. Using the t-distribution table, we can find the critical values ($$\alpha$$) corresponding to the given left-tail area ($$\alpha$$) and degrees of freedom (df). Here are the values:  
 
 7. $$\alpha$$ = .01, df = 9  
    From the t-table, the critical value is:  $t_{0.05}$=1.725  
@@ -50,4 +50,4 @@ Q7. Using the t-distribution table, we can find the critical values ($$alphat$$)
   From the t-table, the critical value is:  $t_{0.005}$=2.787
 
 11. $$\alpha$$ = .005, df = 23  
-  From the t-table, the critical value is:  $t_{t_0.10$}=1.415  
+  From the t-table, the critical value is:  $t_{t_0.10}=1.415  
