--- a/HW1207/13_陳峻毅/CH12.02_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q10.md
@@ -1,1 +1,38 @@
+![393916822-6ee099f5-2d72-41d0-932d-eb255bfe5385](https://github.com/user-attachments/assets/174bda0f-5361-4170-9fd9-c75b2e7c09eb)
 
+# Body Mass Index (BMI) 與收入的迴歸分析
+
+## (a) 獨立變數與因變數
+如果研究者認為 BMI 是收入的函數，則：
+- **獨立變數 ($x$)**：收入 (Income)
+- **因變數 ($y$)**：BMI
+---
+## (b) 最小平方迴歸方程式
+
+根據計算，最小平方迴歸線為：
+$\hat{y} = 32.91 - 0.148x$
+---
+## (c) ANOVA 表
+
+| Source      | $df$ | $SS$  | $MS$   |
+|-------------|------|-------|--------|
+| Regression  | 1    | 59.44 | 59.44  |
+| Error       | 4    | 12.78 | 3.195  |
+| Total       | 5    | 72.22 | —      |
+---
+## 解釋
+
+1. **迴歸平方和 ($SS_{regression}$)**：
+   $SS_{regression} = 59.44$，表示由收入解釋的 BMI 變異量。
+2. **誤差平方和 ($SS_{error}$)**：
+   $SS_{error} = 12.78$，表示由迴歸模型無法解釋的 BMI 變異量。
+3. **總平方和 ($SS_{total}$)**：
+   $SS_{total} = 72.22$，表示 BMI 的總變異量。
+
+### 均方 ($MS$)
+- 迴歸均方：
+  $MS_{regression} = \frac{SS_{regression}}{df_{regression}} = 59.44$
+- 誤差均方：
+  $MS_{error} = \frac{SS_{error}}{df_{error}} = 3.195$
+
+此模型表明收入對 BMI 具有一定的解釋能力，但仍存在其他可能影響 BMI 的因素。
