--- a/HW1207/13_陳峻毅/CH12.02_Q16.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q16.md
@@ -1,1 +1,45 @@
+![394290959-1419cdad-a604-436d-8c02-8a24fec10ad2](https://github.com/user-attachments/assets/a0733752-c0bd-4053-8aaa-4d152948a0bf)
 
+# Strawberries Experiment: Regression Analysis and ANOVA
+
+## (a) 最小平方迴歸線
+
+根據計算，最小平方迴歸線為：
+$\hat{y} = 2.00 - 0.88x$
+---
+## (b) 散佈圖與迴歸線
+
+下圖展示了數據點與迴歸線的關係：
+- **藍點**：數據點
+- **紅線**：迴歸線
+![27b30fbe-0612-41fd-a0ca-c664fcf73624](https://github.com/user-attachments/assets/cdadd0e9-5c05-4d11-9abc-de21124d5972)
+
+紅線表示計算出的迴歸方程 $\hat{y} = 2.00 - 0.88x$。數據點明顯接近迴歸線，表明擬合效果良好。
+---
+## (c) ANOVA 表
+
+| Source      | $df$ | $SS$  | $MS$   |
+|-------------|------|-------|--------|
+| Regression  | 1    | 12.25 | 12.25  |
+| Error       | 3    | 0.25  | 0.083  |
+| Total       | 4    | 12.50 | —      |
+--
+## 解釋
+
+1. **迴歸平方和 ($SS_{regression}$)**：
+   $SS_{regression} = 12.25 $ 
+   表示由模型解釋的變異量。
+2. **誤差平方和 ($SS_{error}$)**：
+   $SS_{error} = 0.25$  
+   表示未被模型解釋的變異量，誤差較小。
+3. **總平方和 ($SS_{total}$)**：
+   $SS_{total} = 12.50$ 
+   表示總變異量。
+
+### 均方 (MS)
+- **迴歸均方**：
+  $MS_{regression} = \frac{SS_{regression}}{df_{regression}} = 12.25$
+- **誤差均方**：
+  $MS_{error} = \frac{SS_{error}}{df_{error}} = 0.083$
+
+該結果表明模型能很好地解釋數據變異。
