--- a/HW1207/13_陳峻毅/CH12.03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q05.md
@@ -1,1 +1,34 @@
+![394299243-5e31d150-18c9-4409-91a2-c8442091357a](https://github.com/user-attachments/assets/ccdc64d6-2a72-4010-9f76-e067205deae7)
 
+# Testing the Slope of the Line: Regression Analysis and Confidence Interval
+## (1) 使用 t 統計量檢驗 x 和 y 是否線性相關
+   $H_0$ : b = 0\
+   $H_a$ : b $\ne$ 0
+   
+- **斜率 (b)**：
+  $b = 1.2$
+- **斜率的標準誤差 ($SE_b$)**：
+  $SE_b = 0.231$
+- **t 統計量**：
+  $t = \frac{b}{SE_b} = \frac{1.2}{0.231} \approx 5.20$
+- **臨界值 (99% 信賴水準, df = 3)**：
+  $t_{critical} = 5.841$
+
+**結論**：
+- 因為 t = 5.20 小於 $t_{critical} = 5.841$，我們**無法拒絕**虛無假設 $H_0$(拒絕Ha)。
+- 在 1% 顯著性水平下，沒有足夠證據可能表明 x 和 y 具有線性關係。
+---
+## (2) 構建斜率的 99% 信賴區間
+信賴區間的公式為：
+$b \pm t_{critical} \cdot SE_b$
+
+計算：
+$1.2 \pm 5.841 \cdot 0.231 \implies (-0.149, 2.549)$
+
+**結論**：
+- 在 99% 的信賴區間內，真實的斜率可能落在 (-0.149, 2.549)。
+---
+## (3) 解釋「99% 信賴區間」
+
+- **含義**：
+  若重複抽樣並計算多個樣本的斜率，則 99% 的這些信賴區間會包含真實的斜率值。
