--- a/HW1207/13_陳峻毅/CH12.03_Q07.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q07.md
@@ -1,1 +1,26 @@
+![394311196-f056e18c-4239-4a06-9cc4-6b52c3fa81c5](https://github.com/user-attachments/assets/b8d8f249-ecc7-42e2-9276-a4c7cd36d121)
 
+# Coefficient of Determination ($r^2$): Regression Analysis
+
+## (1) 計算平方和
+
+- **總平方和 ($SS_{total}$)**：
+  $SS_{total} = \sum (y_i - \bar{y})^2 = 16.0$
+- **迴歸平方和 ($SS_{regression}$)**：
+  $SS_{regression} = \sum (\hat{y}_i - \bar{y})^2 = 14.4$
+---
+## (2) 決定係數 ($r^2$)
+
+公式：
+$r^2 = \frac{SS_{regression}}{SS_{total}}$
+
+計算：
+$r^2 = \frac{14.4}{16.0} = 0.90$
+---
+## (3) 解釋 $r^2$
+
+- **含義**：
+  決定係數 $r^2 = 0.90$ 表示該線性模型能解釋 90% 的 y 值變異量。剩餘的 10% 是由其他因素或隨機誤差造成的。
+
+- **結論**：
+  該線性模型具有良好的解釋能力，適合作為 x 和 y 關係的預測工具。
