--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -3,7 +3,7 @@
 
 ### a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
 
-![image](https://github.com/user-attachments/assets/a4bca127-da43-4aa8-8e03-1ccf17e72202)  
+![image](https://github.com/user-attachments/assets/12df0fd4-c880-4d5a-b3fc-30245be22697)
 
 The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
 
@@ -12,11 +12,63 @@ The pattern shows a positive linear trend with a steady rate of increasing miles
 
 ![image](https://github.com/user-attachments/assets/2760c11a-f44c-40c5-8bf2-e17b3971d932)
 
+**Least-squares line**  
+
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 1,240 - 16 \times 7.5^2 = 340$  
+  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 132.8 - 16 \times 7.5 \times 1.0413 = 7.044$  
+  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{7.044}{340} = 0.02071764706 \approx 0.0207$  
+$a = \bar{y} - b \times \bar{x} = 1.0413 - 0.0207 \times 7.5 = 0.88605$  
+
+Least-squares line: $\hat{y} = a + bx = 0.88605 + 0.0207x$  
+
+
+**t statistic**  
+
+
+
 
 
 ### c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
 
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.0413^2 \approx 0.1847$  
 
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.044^2}{340} \approx 0.1459$  
+
+SSE = Total SS - SSR = $0.1847 - 0.1459 = 0.0388$  
+
+
+**ANOVA table**  
+
+|   Source   |       df     |     SS    |     MS     |  
+|------------|--------------|-----------|------------|  
+| Regression |       1      | **0.1459**| **0.1459** |  
+| Error      | n-2 = **14** | **0.0388**| **0.00277**|  
+| Total      | n-1 = **15** | **0.1847**|  
+
+
+**F statistic**  
+
+1. $H_{0}$: The model is not useful in predicting $y$  
+   $H_{1}$: The model is useful in predicting $y$
+
+2. Set up $\alpha$ = 0.05
+
+3. Test statistic: F = $\frac{MSR}{MSE} \sim F_{1,(n-2)}$
+
+4. Calculate realized statistic F*
+   $\frac{0.1459}{0.00277} \sim F_{1, 14}$ = 52.67148
+
+5. Find the rejection region
+   
+   ![image](https://github.com/user-attachments/assets/6db399b9-57d4-41b8-a98b-9c3b3a6243d1)
+
+6. Conclude
+   Reject $H_{0}$ if $F \lt F_{\alpha}$ with 1 and n-2 df  
+   Reject $H_{0}$ because F* = 52.67148, which is greater than $F_{\alpha}$ with 1 and 14 df  
 
 
 ### d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
