--- a/HW1207/20_柯伊馨/CH12.02_Q16.md
+++ b/HW1207/20_柯伊馨/CH12.02_Q16.md
@@ -1,2 +1,3 @@
 ![image](https://github.com/user-attachments/assets/bace4f22-c69e-4d5f-a4c2-0984d2d3c783)
 
+![image](https://github.com/user-attachments/assets/5ff86937-ddfb-41f9-8898-bc932e25efd0)
