--- a/HW1207/02_顏子軒/CH12.01_Q17.md
+++ b/HW1207/02_顏子軒/CH12.01_Q17.md
@@ -1,1 +1,39 @@
 
+### Method of Least Squares
+
+***Use the data given in Exercises 17–18. Calculate the sums of squares and cross-products, Sxx and Sxy. Find the least-squares line for the data. Plot the points and graph the line on the same graph. Does the line appear to provide a good fit to the data points?***
+
+![image](https://github.com/user-attachments/assets/d8eccf45-789e-4f71-9c89-d4abafa71f55)
+
+>
+>**1.Sums of Squares and Cross-Products:**
+>
+>$S_{xx}$ = $\sum(x_i - \overline{x})^2$ = 10
+>
+>$S_{xy}$ = $\sum(x_i - \overline{x}) (y_i - \overline{y})$ = 12
+>
+><br/>
+>
+>**2.Least-Squares Line:**
+>
+>The least-squares line is given by:
+>
+>$y = a + bx$
+>
+>$b = \frac{S_{xx}}{S_{xy}} = \frac{12}{10} = 1.2$
+>
+>$a = \overline{y} - b \times \overline{x} = 3 - 1.2 \times 0 = 3$
+>
+>Final equation of the least-squares line: $y = 3 + 1.2x$
+>
+><br/>
+>
+>**3.Graph:**
+>
+>- The red points represent the data points.
+>
+>- The blue line is the least-squares line.
+>
+>- ![image](https://github.com/user-attachments/assets/559c5e4a-939b-435e-ab30-459a589d6a7b)
+
+
