--- a/HW1207/02_顏子軒/CH12.01_Q17.md
+++ b/HW1207/02_顏子軒/CH12.01_Q17.md
@@ -24,7 +24,7 @@
 >
 >$a = \overline{y} - b \times \overline{x} = 3 - 1.2 \times 0 = 3$
 >
->Final equation of the least-squares line: $y = 3 + 1.2x$
+>Final equation of the least-squares line: $\hat{y} = 3 + 1.2x$
 >
 ><br/>
 >
