--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -1,56 +1,75 @@
 
 ![image](https://github.com/user-attachments/assets/496753a3-ba54-4d69-be25-f6696998955c)
+  
+  
+  
+## a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
 
-### a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
-
-![image](https://github.com/user-attachments/assets/12df0fd4-c880-4d5a-b3fc-30245be22697)
+![image](https://github.com/user-attachments/assets/0e231d33-fb0d-48fc-9f9e-0fdf7988e267)  
 
 The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
+  
+  
+  
+## b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
 
-
-### b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
-
-![image](https://github.com/user-attachments/assets/2760c11a-f44c-40c5-8bf2-e17b3971d932)
-
-**Least-squares line**  
+![image](https://github.com/user-attachments/assets/2760c11a-f44c-40c5-8bf2-e17b3971d932)  
+  
+  
+### Least-squares line  
 
 $S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
 $S_{xx} = 1,240 - 16 \times 7.5^2 = 340$  
   
 $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
-$S_{xy} = 132.8 - 16 \times 7.5 \times 1.0413 = 7.044$  
+$S_{xy} = 132.8 - 16 \times 7.5 \times 1.0413 = 7.844$  
   
-$b = \frac{S_{xy}}{S_{xx}} = \frac{7.044}{340} = 0.02071764706 \approx 0.0207$  
-$a = \bar{y} - b \times \bar{x} = 1.0413 - 0.0207 \times 7.5 = 0.88605$  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{7.844}{340} = 0.02307058824 \approx 0.0231$  
+$a = \bar{y} - b \times \bar{x} = 1.0413 - 0.0231 \times 7.5 = 0.86805$  
 
-Least-squares line: $\hat{y} = a + bx = 0.88605 + 0.0207x$  
-
-
-**t statistic**  
+Least-squares line: $\hat{y} = a + bx = 0.86805 + 0.0231x$  
 
 
-
-
-
-### c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
+### t statistic  
 
 Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.0413^2 \approx 0.1847$  
 
-SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.044^2}{340} \approx 0.1459$  
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.844^2}{340} = 0.1809656941 \approx 0.181$  
 
-SSE = Total SS - SSR = $0.1847 - 0.1459 = 0.0388$  
+SSE = Total SS - SSR = $0.1847 - 0.181 = 0.0037$  
 
+MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$  
+  
+1. $H_{0}: \beta = 0$ (Slope of the line is 0) vs $H_{1}: \beta \neq 0$ (Slope of the line is not 0)  
 
-**ANOVA table**  
+2. Set $\alpha$=0.05  
+
+3. $t_{TEST} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
+
+4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.0003}{340}}} = 24.59182791 \approx 24.5918$  
+
+5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -2.145$ or $t* \gt 2.145$  
+
+![image](https://github.com/user-attachments/assets/45279de2-f13f-424b-8a2b-4066a58abf29)  
+
+6. Conclude: The $t*$ is greater than 2.145, which falls into the rejection region. Therefore, $H_{0}$ is rejected.
+   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
+  
+  
+  
+## c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
+  
+  
+### ANOVA table  
 
 |   Source   |       df     |     SS    |     MS     |  
 |------------|--------------|-----------|------------|  
-| Regression |       1      | **0.1459**| **0.1459** |  
-| Error      | n-2 = **14** | **0.0388**| **0.00277**|  
+| Regression |       1      | **0.181** | **0.181**  |  
+| Error      | n-2 = **14** | **0.0037**| **0.00026**|  
 | Total      | n-1 = **15** | **0.1847**|  
 
 
-**F statistic**  
+### F statistic  
 
 1. $H_{0}$: The model is not useful in predicting $y$  
    $H_{1}$: The model is useful in predicting $y$
@@ -60,7 +79,7 @@ SSE = Total SS - SSR = $0.1847 - 0.1459 = 0.0388$
 3. Test statistic: F = $\frac{MSR}{MSE} \sim F_{1,(n-2)}$
 
 4. Calculate realized statistic F*
-   $\frac{0.1459}{0.00277} \sim F_{1, 14}$ = 52.67148
+   $\frac{0.181}{0.00026} \sim F_{1, 14} = 696.153846153 \approx 696.1538$  
 
 5. Find the rejection region
    
@@ -68,10 +87,15 @@ SSE = Total SS - SSR = $0.1847 - 0.1459 = 0.0388$
 
 6. Conclude
    Reject $H_{0}$ if $F \lt F_{\alpha}$ with 1 and n-2 df  
-   Reject $H_{0}$ because F* = 52.67148, which is greater than $F_{\alpha}$ with 1 and 14 df  
+   Reject $H_{0}$ because F* = 696.1538, which is greater than $F_{\alpha}$ with 1 and 14 df
+   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
+
+### Verify the $t^2$ is equal to $F$
+
+The square of t statistic in part b is $24.5918^2$ = 604.75662724 $\approx$ 604.7566
 
 
-### d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
+## d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
 
 
 
