--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -5,7 +5,7 @@
   
 ## a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
 
-![image](https://github.com/user-attachments/assets/0e231d33-fb0d-48fc-9f9e-0fdf7988e267)  
+![image](https://github.com/user-attachments/assets/a144f902-351c-42a5-b8df-46844c790e35)  
 
 The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
   
@@ -13,7 +13,7 @@ The pattern shows a positive linear trend with a steady rate of increasing miles
   
 ## b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
 
-![image](https://github.com/user-attachments/assets/2760c11a-f44c-40c5-8bf2-e17b3971d932)  
+![image](https://github.com/user-attachments/assets/e2e69a31-6b13-4459-9cd3-5e4b77395fa6)
   
   
 ### Least-squares line  
@@ -22,23 +22,23 @@ $S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$
 $S_{xx} = 1,240 - 16 \times 7.5^2 = 340$  
   
 $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
-$S_{xy} = 132.8 - 16 \times 7.5 \times 1.0413 = 7.844$  
+$S_{xy} = 132.8 - 16 \times 7.5 \times 1.04125 = 7.85$  
   
-$b = \frac{S_{xy}}{S_{xx}} = \frac{7.844}{340} = 0.02307058824 \approx 0.0231$  
-$a = \bar{y} - b \times \bar{x} = 1.0413 - 0.0231 \times 7.5 = 0.86805$  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{7.85}{340} = 0.02308823529 \approx 0.0231$  
+$a = \bar{y} - b \times \bar{x} = 1.04125 - 0.0231 \times 7.5 = 0.868$  
 
-Least-squares line: $\hat{y} = a + bx = 0.86805 + 0.0231x$  
+Least-squares line: $\hat{y} = a + bx = 0.868 + 0.0231x$  
 
 
 ### t statistic  
 
-Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.0413^2 \approx 0.1847$  
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.04125^2 = 0.186375 \approx 0.1864$  
 
-SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.844^2}{340} = 0.1809656941 \approx 0.181$  
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.85^2}{340} = 0.18124264705 \approx 0.1812$  
 
-SSE = Total SS - SSR = $0.1847 - 0.181 = 0.0037$  
+SSE = Total SS - SSR = $0.1864 - 0.1812 = 0.0052$  
 
-MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$  
+MSE = $\frac{0.0052}{14} = 0.00037142857 \approx 0.00037$  
   
 1. $H_{0}: \beta = 0$ (Slope of the line is 0) vs $H_{1}: \beta \neq 0$ (Slope of the line is not 0)  
 
@@ -46,7 +46,7 @@ MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$
 
 3. $t_{TEST} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
 
-4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.0003}{340}}} = 24.59182791 \approx 24.5918$  
+4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.00037}{340}}} = 22.14371975 \approx 22.1437$  
 
 5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -2.145$ or $t* \gt 2.145$  
 
@@ -64,9 +64,9 @@ MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$
 
 |   Source   |       df     |     SS    |     MS     |  
 |------------|--------------|-----------|------------|  
-| Regression |       1      | **0.181** | **0.181**  |  
-| Error      | n-2 = **14** | **0.0037**| **0.00026**|  
-| Total      | n-1 = **15** | **0.1847**|  
+| Regression |       1      | **0.1812**| **0.1812** |  
+| Error      | n-2 = **14** | **0.0052**| **0.00037**|  
+| Total      | n-1 = **15** | **0.1864**|  
 
 
 ### F statistic  
@@ -79,7 +79,7 @@ MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$
 3. Test statistic: F = $\frac{MSR}{MSE} \sim F_{1,(n-2)}$
 
 4. Calculate realized statistic F*
-   $\frac{0.181}{0.00026} \sim F_{1, 14} = 696.153846153 \approx 696.1538$  
+   $\frac{0.1812}{0.00037} \sim F_{1, 14} = 489.729729729 \approx 489.7297$  
 
 5. Find the rejection region
    
@@ -87,15 +87,18 @@ MSE = $\frac{0.0037}{14} = 0.00026428571 \approx 0.0003$
 
 6. Conclude
    Reject $H_{0}$ if $F \lt F_{\alpha}$ with 1 and n-2 df  
-   Reject $H_{0}$ because F* = 696.1538, which is greater than $F_{\alpha}$ with 1 and 14 df
+   Reject $H_{0}$ because F* = 489.7297, which is greater than $F_{\alpha}$ with 1 and 14 df
    This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
 
 ### Verify the $t^2$ is equal to $F$
 
-The square of t statistic in part b is $24.5918^2$ = 604.75662724 $\approx$ 604.7566
+The square of t statistic in part b is $22.1437^2$ $\approx$ 490.3434, which is close to F statistic 489.7297
 
 
 ## d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
 
+$R^2 = \frac{SSR}{SS_{Total}}$  
+$R^2 = \frac{0.1812}{0.1864} \approx 0.972103 = 97.21%$  
 
+The $R^2$ value indicates that 97.21% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
 
