--- a/HW1207/02_顏子軒/CH12.01_Q22.md
+++ b/HW1207/02_顏子軒/CH12.01_Q22.md
@@ -1,1 +1,45 @@
+### Armspan and Height
 
+***Leonardo da Vinci (1452–1519) drew a sketch of a man, indicating that a person’s armspan (measuring across the back with your arms outstretched to make a “T”) is roughly equal to the person’s height. To test this claim, we measured eight people with the following results:***
+
+![image](https://github.com/user-attachments/assets/8ba61af1-e23c-4a37-8e2a-398c2b2a80e2)
+
+![image](https://github.com/user-attachments/assets/4bd499e0-cfe6-4834-aa6f-ab7b12217be8)
+
+
+>**a. Draw a scatterplot for armspan and height. Use the same scale on both the horizontal and vertical axes. Describe the relationship between the two variables.**
+>
+>- The scatterplot above shows the relationship between armspan and height.
+>
+>- The red dashed line represents the ideal case where armspan equals height $(y=x)$
+>- The data points mostly align with the red line, indicating a positive linear relationship.
+> ![image](https://github.com/user-attachments/assets/a687562b-d4d6-45de-86fd-4019509e3d90)
+>
+><br/>
+>
+>**b. If da Vinci is correct, and a person’s armspan is roughly the same as the person’s height, what should the slope of the regression line be?**
+>
+>If da Vinci is correct and armspan is roughly equal to height, the slope of the regression line should be $b=1$
+>
+><br/>
+>
+>**c. Calculate the regression line for predicting height based on a person’s armspan. Does the value of the slope b confirm your conclusions in part b?**
+>
+>The regression line equation is: $\hat{y} = a + b \times x$
+>
+>- Mean of $x$ armspan : $\overline{x}$ = 161
+>- Mean of $y$ height : $\overline{y}$ = 161.375
+>- Cross-product: $S_{xy} = \sum (x_i - \overline{x})(y_i - \overline{y})$ = 324
+>- Sum of squares: $S_{xx} = \sum (x_i - \overline{x})^2 = 247
+>- Slope of the line: $b = \frac{S_{xy}}{S_{xx}}$ = $\frac{247}{324} \approx 0.76$
+>- Intercept: $a = \overline{y} - b \times \overline{x}$ = $161.375 - 0.76 \times 161 \approx 96.56$ 
+>
+><br/>
+>
+>**d. If a person has an armspan of 157 centimeters, what would you predict the person’s height to be?**
+>
+>Using the regression equation: $y = 96.56 + 0.76x$
+>
+>Substitute $x = 157$: $y=96.56+0.76 \times157 = 158.96cm$
+>
+>*This value suggests that the relationship is strong but does not perfectly align with da Vinci's claim.*
