--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -1,1 +1,3 @@
+### Fill in the Blanks
 
+### Fill in the missing entries in the analysis of variance table for a simple linear regression analysis shown in Exercises 4–5.
