--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -1,3 +1,13 @@
 ### Fill in the Blanks
 
-### Fill in the missing entries in the analysis of variance table for a simple linear regression analysis shown in Exercises 4–5.
+***Fill in the missing entries in the analysis of variance table for a simple linear regression analysis shown in Exercises 4–5.***
+
+![image](https://github.com/user-attachments/assets/c69fef68-af6c-4612-9949-3e186ee5eb98)
+
+>**ANOVA Table**
+>
+>|no|Source    |df  |SS  |MS            |
+>|1 |Regression|1.0 |4.3 |4.3           |
+>|2 |Error     |18.0|8.2 | $\approx0.45$|
+>|3 |Total     |19.0|12.5| $\approx0.66$|
+
