--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -7,7 +7,28 @@
 >**ANOVA Table**
 >
 >|no|Source    |df  |SS  |MS            |
+>|--|----------|----|----|--------------|
 >|1 |Regression|1.0 |4.3 |4.3           |
 >|2 |Error     |18.0|8.2 | $\approx0.45$|
 >|3 |Total     |19.0|12.5| $\approx0.66$|
+>
+>*Degrees of Freedom*
+>- Total $df$ = $n-1$ ,This value is already provided as 19
+>- Regression$df$ = For simple linear regression, there is 1 predictor variable
+>- Error $df$ = $df_{Error} = df_{Total} - df_{Regression} = 19 - 1 = 18$
+>
+>*Sum of Squares $(SS)$
+>
+>- Total $SS$ : This is provided as 12.5
+>- Regression$SS$ : This is provided as 4.3
+>- Error $SS$ : $SS_{Error} = SS_{Total} - SS_{Regression} = 12.5 - 4.3 = 8.2$
+>
+>*Mean Squares $(MS)$
+>
+>- The mean square for each source is calculated as: $MS = \frac{SS}{MS}$
+>- Regression$MS$ : $MS_{Regression} = \frac{SS_{Regression}}{df_{Regression}} = \frac{4.30}{1} = 4.3$
+>- Error $MS$ : $MS_{Error} = \frac{SS_{Error}}{df_{Error}} = \frac{8.2}{18} \approx 0.4556$
+>
+
+
 
