--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -10,7 +10,7 @@
 >|--|----------|----|----|--------------|
 >|1 |Regression|1.0 |4.3 |4.3           |
 >|2 |Error     |18.0|8.2 | $\approx0.45$|
->|3 |Total     |19.0|12.5| $\approx0.66$|
+>|3 |Total     |19.0|12.5|  |
 >
 >*Degrees of Freedom*
 >- Total $df$ = $n-1$ ,This value is already provided as 19
