--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -17,13 +17,13 @@
 >- Regression$df$ = For simple linear regression, there is 1 predictor variable
 >- Error $df$ = $df_{Error} = df_{Total} - df_{Regression} = 19 - 1 = 18$
 >
->*Sum of Squares $(SS)$
+>*Sum of Squares $(SS)$*
 >
 >- Total $SS$ : This is provided as 12.5
 >- Regression$SS$ : This is provided as 4.3
 >- Error $SS$ : $SS_{Error} = SS_{Total} - SS_{Regression} = 12.5 - 4.3 = 8.2$
 >
->*Mean Squares $(MS)$
+>*Mean Squares $(MS)$*
 >
 >- The mean square for each source is calculated as: $MS = \frac{SS}{MS}$
 >- Regression$MS$ : $MS_{Regression} = \frac{SS_{Regression}}{df_{Regression}} = \frac{4.30}{1} = 4.3$
