--- a/HW1207/02_顏子軒/CH12.02_Q06.md
+++ b/HW1207/02_顏子軒/CH12.02_Q06.md
@@ -1,1 +1,11 @@
+### Method of Least Squares
 
+***Use the data given in Exercises
+6–7 (Exercises 17–18, Section 12.1). Construct the
+ANOVA table for a simple linear regression analysis, showing
+the sources, degrees of freedom, sums of squares, and
+mean squares.***
+
+![image](https://github.com/user-attachments/assets/8224f8b2-9a4a-47ba-b899-7fce6c0acd08)
+
+>
