--- a/HW1207/02_顏子軒/CH12.02_Q06.md
+++ b/HW1207/02_顏子軒/CH12.02_Q06.md
@@ -9,3 +9,28 @@ mean squares.***
 ![image](https://github.com/user-attachments/assets/8224f8b2-9a4a-47ba-b899-7fce6c0acd08)
 
 >
+>**ANOVA Table**
+>
+>|no|Source    |df  |SS  |MS            |
+>|--|----------|----|----|--------------|
+>|1 |Regression|1.0 |$\approx14.40$ |$\approx14.40$   |
+>|2 |Error     |3.0|$\approx 1.60$ | $\approx0.53$|
+>|3 |Total     |4.0|16.0|  |
+>
+>*Sum of Squares*
+>1. Total Sum of Squares : $SS_{Total} = \sum(y_i - \overline{y})^2$
+>2. Regression Sum of Squares : $SS_{Regression} = b \times S_{xy} = \frac{S_{xy}}{S_{xx}} \times \sum(x_i - \overline{x})(y_i - \overline{y})$ = $1.2 \times 12 = 14.4$
+>3. Error Sum of Squares  : $SS_{Error} = SS_{Total} - SS_{Regression}$ = $16 -14.4 = 1.6$
+>4. Total Sum of Squares : $SS_{Total} = S_{yy} =16$
+>
+>*Mean Squares*
+>1. Mean Square for Regression : $MS_{Reression} = \frac{SS_{Regrssion}}{df_{Regression}}$ = $\frac{14.4}{1} = 14.4$
+>2. Mean Square for Error : $MS_{Error} = \frac{SS_{Error}}{df_{Error}}$ = $\frac{1.6}{3} \approx 0.53$
+>
+>- $\overline{x} = 0$
+>- $\overline{y} = 3$
+>- $S_{xx} = \sum(x_i - \overline{x})^2 = 10$
+>- $S_{xy} = \sum(x_i - \overline{x})(y_i - \overline{y}) = 12$
+>- $S_{yy} = \sum(y_i - \overline{y})^2 = 16$
+>- $b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$
+>- $a = \overline{y} - b \times \overline{x} = 3 -1.2 \times 0 = 3$
