--- a/HW1207/02_顏子軒/CH12.02_Q10.md
+++ b/HW1207/02_顏子軒/CH12.02_Q10.md
@@ -1,1 +1,30 @@
+### Body Mass Index
 
+***A study using body mass
+index (BMI)—an index of obesity—as a function
+of income ($ thousands) reported the following
+data for California in 2016***
+
+![image](https://github.com/user-attachments/assets/7a643f67-943b-456c-a414-ea04fe202627)
+
+***a. If the researcher thinks that BMI is a function of
+income, which of the two variables is the independent
+variable x and which is the dependent variable y?***
+>
+>- Income is the independent variable (𝑥), as it is believed to influence BMI.
+>- BMI is the dependent variable (𝑦), as it depends on or is predicted by income.
+>
+><br/>
+***b. Find the least-squares line relating BMI to income.***
+>
+>- $\overline{x} = 40.42$
+>- $\overline{y} = 27$
+>- $S_{xx} = \sum(x_i - \overline{x})^2 = 2254.5$
+>- $S_{xy} = \sum(x_i - \overline{x})(y_i - \overline{y}) = -332.43$
+>- $b = \frac{S_{xy}}{S_{xy}} = \frac{-332.43}{2254.5} = -0.1476$
+>- $a = \overline{y} - b \times \overline{x} = 27 - (-0.1476)(40.42) = 32.91$
+>
+>**Final regression line: $hat{y} = 32.91 - 0.15 \times x$**
+>
+><br/>
+***c. Construct the ANOVA table for the linear regression.***
