--- a/HW1207/02_顏子軒/CH12.02_Q10.md
+++ b/HW1207/02_顏子軒/CH12.02_Q10.md
@@ -28,3 +28,11 @@ variable x and which is the dependent variable y?***
 >
 ><br/>
 ***c. Construct the ANOVA table for the linear regression.***
+>
+>**ANOVA Table**
+>
+>|no|Source    |df  |SS  |MS            |
+>|--|----------|----|----|--------------|
+>|1 |Regression|1 |49.04 |49.04   |
+>|2 |Error     |4|7.26 |1.815|
+>|3 |Total     |5|56.3|  |
