--- a/HW1207/02_顏子軒/CH12.02_Q10.md
+++ b/HW1207/02_顏子軒/CH12.02_Q10.md
@@ -24,7 +24,7 @@ variable x and which is the dependent variable y?***
 >- $b = \frac{S_{xy}}{S_{xy}} = \frac{-332.43}{2254.5} = -0.1476$
 >- $a = \overline{y} - b \times \overline{x} = 27 - (-0.1476)(40.42) = 32.91$
 >
->**Final regression line: $hat{y} = 32.91 - 0.15 \times x$**
+>**Final regression line: $\hat{y} = 32.91 - 0.15 x$**
 >
 ><br/>
 ***c. Construct the ANOVA table for the linear regression.***
@@ -33,6 +33,6 @@ variable x and which is the dependent variable y?***
 >
 >|no|Source    |df  |SS  |MS            |
 >|--|----------|----|----|--------------|
->|1 |Regression|1 |49.04 |49.04   |
->|2 |Error     |4|7.26 |1.815|
->|3 |Total     |5|56.3|  |
+>|1 |Regression|1 |59.4417 |59.4417   |
+>|2 |Error     |4|12.7783 |3.1946|
+>|3 |Total     |5|72.22|  |
