--- a/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
@@ -2,3 +2,61 @@
 ![image](https://github.com/user-attachments/assets/ac0b9f85-f054-49c8-b595-5739b6052a08)  
 ![image](https://github.com/user-attachments/assets/08de4268-9fc9-444f-9ad8-7b20f505eab2)
 
+
+
+## a. Find the least-squares line relating the percentage arrested to the group median age.  
+
+$\hat{y} = a + bx = 93.617 - 1.251x$  
+
+![image](https://github.com/user-attachments/assets/add40353-487b-466a-a43f-d83fa8e7c3c8)  
+
+
+
+## b. Do the data provide sufficient evidence to indicate that $x$ and $y$ are linearly related? Test using the $t$ statistic at the 5% level of significance.  
+
+**t statistic**
+
+$H_{0}: \beta = 0$ (Slope of the line is 0)  
+$H_{1}: \beta \neq 0$ (Slope of the line is not 0)  
+
+two-tail test, $\alpha$=0.05  
+
+Reject region: The $t_{STAT}$, 20.436, is greater than 2.571, which falls into the rejection region. Therefore, $H_{0}$ is rejected. 
+
+p-value: The p-value is 0, which is less than 0.05, $H_{0}$ is rejected
+
+![image](https://github.com/user-attachments/assets/4af7a966-a049-4ddd-a1b4-e6c815f98808)
+
+![image](https://github.com/user-attachments/assets/a8e82da3-3ccf-44f9-961d-fd965a6813de)
+
+The results indicate that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between $x$ and $y$.  
+
+
+
+## c. Construct a 95% confidence interval for the slope of the line.  
+
+This is a two-tail test, and the lower bound for 95% confidence interval is -1.559.  
+
+![image](https://github.com/user-attachments/assets/9a78acd8-242f-44ce-9ecd-7601c157f473)  
+
+![image](https://github.com/user-attachments/assets/68b099e6-f72c-42f4-be98-abffe5804aec)  
+
+The lower bound = $b - t_{\alpha / 2} \times \sqrt{\frac{MSE}{S_{xx}}}$ = -1.559  
+
+$-1.251 - t_{\alpha / 2} \times \sqrt{\frac{MSE}{S_{xx}}}$ = -1.559  
+
+$t_{\alpha / 2} \times \sqrt{\frac{MSE}{S_{xx}}}$ = -1.251 +1.559 = 0.308  
+
+The upper bound = -1.251 + 0.308 = -0.943  
+
+The resulting 95% confidence interval is -1.559 to -0.943.  
+
+
+
+## d. Find the coefficient of determination and interpret its significance.  
+
+Coefficient of determination = $\frac{SSR}{Total SS} = R^2 = 0.9564$
+
+![image](https://github.com/user-attachments/assets/4720a504-38be-43aa-a207-c6ca8022cd80)
+
+The $R^2$ value indicates that 95.64% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
