--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -44,7 +44,7 @@ MSE = $\frac{0.0052}{14} = 0.00037142857 \approx 0.00037$
 
 2. Set $\alpha$=0.05  
 
-3. $t_{TEST} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
+3. $t_{STAT} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
 
 4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.00037}{340}}} = 22.14371975 \approx 22.1437$  
 
