--- a/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
@@ -35,7 +35,7 @@ MSE = $\frac{MSE}{n-2} = \frac{1.6}{3} = 0.5333$
 
 1. $H_{0}: \beta = 0$ vs $H_{1}: \beta \neq 0$  
 2. Set $\alpha$=0.01  
-3. $t_{TEST} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
+3. $t_{STAT} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
 4. Calculate t* = $\frac{1.2-0}{\sqrt{\frac{0.5333}{10}}} = 5.19631481 \approx 5.1963$  
 5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -5.841$ or $t* \gt 5.841$  
 6. Conclude: $t*$ is between -5.841 and 5.841, does not fall into the rejection region, $H_{0}$ is not rejected.  
