--- a/HW1207/20_柯伊馨/CH12.03_Q07.md
+++ b/HW1207/20_柯伊馨/CH12.03_Q07.md
@@ -1,1 +1,5 @@
+![image](https://github.com/user-attachments/assets/311324c0-ea47-4198-82f5-ab61a792cb7a)
 
+使用所給的數據計算決定係數 r^ 。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
+
+![image](https://github.com/user-attachments/assets/326ab7df-f27d-4f75-a2e9-cfda0988426e)
