--- a/HW1207/13_陳峻毅/CH12.03_Q09.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q09.md
@@ -1,1 +1,45 @@
+![394313596-56d7d994-66b4-4bf1-a91e-d7cb2e2036c0](https://github.com/user-attachments/assets/cb5182ac-f91c-4fbb-8ea4-b6528fa1809b)
 
+### a. 散佈圖
+散佈圖顯示了公路里程隨年份增加而增長的趨勢，且呈現明顯的線性關係。
+![a93796bb-439c-4d9c-95b2-3dd69c5b638c](https://github.com/user-attachments/assets/434518b4-57fb-43f0-b2da-8e7e4626d3d2)
+
+---
+### b. 最小平方法回歸線與檢定結果
+回歸線方程：
+$y = 0.868 + 0.0231x$
+
+檢定結果：
+ t -統計量：t = 22.23 
+- 自由度：df = 14
+- P -值：P < 0.0001（顯著）
+
+結論：在顯著性水平 $\alpha = 0.05$ 下，拒絕虛無假設 $H_0$。結果表明，公路里程與年份之間存在顯著的線性關係。
+
+---
+
+### c. ANOVA 表格
+
+| Source      | Sum of Squares | Degrees of Freedom | Mean Square      | F-statistic |
+|-------------|----------------|--------------------|------------------|-------------|
+| Regression  |  SSR = 0.0539  |  1               | 0.0539       |  494.36 $ |
+| Error       |  SSE = 0.0015  | 14             |  0.0001       | N/A         |
+| Total       |  SST = 0.0554  |  15             | N/A              | N/A         |
+
+**驗證：**
+$F = t^2$，計算結果一致。
+
+---
+
+### d. 計算 $r^2$ 並解釋
+回歸模型的 $r^2$ 值為：
+$r^2 = 0.972$
+這表明，年份對公路里程變化的解釋力達到 **97.2%**。換句話說，該模型非常有效，絕大多數的數據變異性都可以由年份的線性變化解釋。
+
+---
+
+### 總結
+1. **散佈圖** 顯示明顯的線性關係。
+2. **回歸分析與檢定** 證明年份與公路里程之間的線性關係顯著。
+3. **ANOVA** 表格支持這一結果，並驗證了 $t^2 = F$。
+4. $r^2$ 高達 0.972 ，說明回歸線能有效地解釋數據的變化。
